tests/testcases/valid/control_flow/18_for_loops_types.ciel
// For loops with different data types

int main() {
    int sum = 0;
    
    // Test 1: For loop with float
    float fsum = 0.0;
    for (float f = 0.0; f < 10.0; f = f + 1.0) {
        fsum = fsum + f;
    }
    
    // Test 2: For loop with int variable used as accumulator
    int val = 1;
    for (int i = 0; i < 5; i = i + 1) {
        val = val + val;
    }
    sum = val;
    
    return 0;
}
