tests/testcases/invalid/semantic/33_for_with_decl_condition_not_bool.ciel
// Error: for loop condition must be of type 'bool'
struct S { int x; };
int main() {
    struct S s;
    for (int i = 0; s; i = i + 1) {  // Error: s is struct, not bool, integral or float
        // loop body
    }
    return 0;
}
